# cairo-lint

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINING.md  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  test.yml
crates/cairo-lint-cli/: Cargo.toml
crates/cairo-lint-cli/src/: helpers.rs  main.rs
crates/cairo-lint-core/: Cargo.toml
crates/cairo-lint-core/src/: db.rs  diagnostics.rs  erasing_op.rs  fix.rs  lib.rs  plugin.rs  plugin.txt  types.rs
crates/cairo-lint-core/src/fix/: helper.rs  import_fixes.rs
crates/cairo-lint-core/src/lints/: assertions_on_constans.rs  assertions_on_constants.rs  bitwise_for_parity_check.rs  bool_assert_comparison.rs  bool_comparison.rs  breaks.rs  clone_on_copy.rs  collapsible_if.rs  collapsible_if_else.rs  comparison_to_empty.rs  double_comparison.rs  double_parens.rs  duplicate_underscore_args.rs  eq_op.rs  equal_operand.rs  equatable_if_let.rs  erasing_op.rs  ifs.rs  impossible_comparison.rs  int_op_one.rs  int_plus_one.rs  invisible_characters.rs  loop_for_while.rs  loops.rs  manual_ok_or.rs  manual_unwrap_or_default.rs  min_max.rs  mod.rs  operator.rs  panic.rs  performance.rs  single_match.rs  unwrap_used.rs  useless_conversion.rs
crates/cairo-lint-core/src/lints/ifs/: check_if_else_same.rs  collapsible_if.rs  collapsible_if_else.rs  equatable_if_let.rs  ifs_same_cond.rs  mod.rs
crates/cairo-lint-core/src/lints/loops/: loop_for_while.rs  loop_match_pop_front.rs  mod.rs
crates/cairo-lint-core/src/lints/manual/: helpers.rs  manual.rs  manual_assert.rs  manual_err.rs  manual_expect.rs  manual_expect_err.rs  manual_is.rs  manual_is_none.rs  manual_is_some.rs  manual_ok.rs  manual_ok_or.rs  manual_unwrap_or.rs  manual_unwrap_or_default.rs  mod.rs
crates/cairo-lint-core/tests/: tests.rs
crates/cairo-lint-core/tests/test_files/: destruct_if_let  double_parens  erasing_op  erasing_op_zero  if_let  unused_import  unused_variables
crates/cairo-lint-core/tests/test_files/assertions_on_constans/: assertions_on_constans
crates/cairo-lint-core/tests/test_files/bitwise_for_parity_check/: bitwise_for_parity_check
crates/cairo-lint-core/tests/test_files/bool_assert_comparison/: bool_assert_comparison
crates/cairo-lint-core/tests/test_files/bool_comparison/: bool_comparison
crates/cairo-lint-core/tests/test_files/break_unit/: break_unit.rs
crates/cairo-lint-core/tests/test_files/breaks/: breaks
crates/cairo-lint-core/tests/test_files/clone_on_copy/: clone_on_copy
crates/cairo-lint-core/tests/test_files/collapsible_if/: collapsible_if
crates/cairo-lint-core/tests/test_files/collapsible_if_else/: collapsible_if_else
crates/cairo-lint-core/tests/test_files/comparison/: eq_op
crates/cairo-lint-core/tests/test_files/comparison_to_empty/: comparison_to_empty
crates/cairo-lint-core/tests/test_files/double_comparison/: double_comparison
crates/cairo-lint-core/tests/test_files/double_parens/: double_parens
crates/cairo-lint-core/tests/test_files/duplicate_underscore_args/: duplicate_underscore_args
crates/cairo-lint-core/tests/test_files/empty_enum_variants_with_brackets/: empty_enum_variants_with_brackets
crates/cairo-lint-core/tests/test_files/eq_op/: eq_op
crates/cairo-lint-core/tests/test_files/equatable_if_let/: equatable_if_let
crates/cairo-lint-core/tests/test_files/erasing_operations/: erasing_operation  erasing_operations
crates/cairo-lint-core/tests/test_files/ifs/: check_if_else_same  collapsible_if  collapsible_if_else  equatable_if_let  ifs_same_cond
crates/cairo-lint-core/tests/test_files/impossible_comparison/: impossible_comparison
crates/cairo-lint-core/tests/test_files/int_op_one/: int_op_one
crates/cairo-lint-core/tests/test_files/int_plus_one/: int_plus_one
crates/cairo-lint-core/tests/test_files/invisible_characters/: invisible_characters
crates/cairo-lint-core/tests/test_files/loop_for_while/: loop_for_while
crates/cairo-lint-core/tests/test_files/loops/: loop_for_while  loop_match_pop_front
crates/cairo-lint-core/tests/test_files/manual/: manual_assert  manual_err  manual_expect  manual_expect_err  manual_is_err  manual_is_none  manual_is_ok  manual_is_some  manual_ok  manual_ok_or  manual_unwrap_or  manual_unwrap_or_default
crates/cairo-lint-core/tests/test_files/manual_assert/: manual_assert
crates/cairo-lint-core/tests/test_files/manual_unwrap_or_default/: manual_unwrap_or_default
crates/cairo-lint-core/tests/test_files/min_max/: min_max
crates/cairo-lint-core/tests/test_files/operator/: erasing_op
crates/cairo-lint-core/tests/test_files/panic/: panic
crates/cairo-lint-core/tests/test_files/performance/: inefficient_while_comp
crates/cairo-lint-core/tests/test_files/single_match/: destructuring_match
crates/cairo-lint-core/tests/test_files/unused_imports/: unused_imports
crates/cairo-lint-core/tests/test_files/unused_variables/: unused_variables
crates/cairo-lint-core/tests/test_files/unwrap_used/: unwrap_used
crates/cairo-lint-core/tests/test_files/useless_conversion/: useless_conversion
crates/cairo-lint-dev/: Cargo.toml
crates/cairo-lint-dev/src/: main.rs
crates/cairo-lint-test-utils/: Cargo.toml
crates/cairo-lint-test-utils/src/: erasing_op_test.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: create_test.rs  main.rs
