[workspace]
resolver = "2"
members = [
  "crates/cairo-lint-cli",
  "crates/cairo-lint-core",
  "crates/cairo-lint-test-utils",
  "xtask"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/keep-starknet-strange/cairo-lint"
license-file = "LICENSE"

[workspace.dependencies]
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-test-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "ca2dceb" }
test-case = "3.0"
pretty_assertions = "1.4.1"
ctor = "0.2.9"
paste = "1.0.15"
itertools = "0.13.0"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"]}
anyhow = "1.0.94"
smol_str = "0.2.2"
annotate-snippets = "0.11.5"
num-bigint = "0.4.6"
if_chain = "1.0.2"
