[package]
name = "cairo-lint"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-defs.workspace = true
salsa.workspace = true
