[package]
name = "scarb-cairo-lint"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[[bin]]
name = "scarb-cairo-lint"
path = "src/main.rs"

[dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-starknet.workspace = true
clap = { workspace = true, features = ["derive"] }
scarb-ui = { git = "https://github.com/software-mansion/scarb", rev = "40fda22e63355f68cb044f215575d1dc11e573df"}
anyhow.workspace = true
scarb-metadata = { git = "https://github.com/software-mansion/scarb", rev = "40fda22e63355f68cb044f215575d1dc11e573df"}
cairo-lint-core = { path = "../cairo-lint-core" }
semver = "1.0.24"
# scarb = { git = "https://github.com/software-mansion/scarb", branch = "main" }
smol_str.workspace = true
annotate-snippets.workspace = true
